<resources>
    <string name="app_name">Ecommerce</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open drawer</string>
    <string name="shop">Shop</string>
    <string name="tag_line">The Best beauty products for you.</string>
    <string name="search">Search</string>
    <string name="brand_name">Ariana Grande</string>
    <string name="product_image">Product Image</string>
    <string name="details">Details</string>
    <string name="go_back">go back</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="category">Lipstick</string>
    <string name="brand">Cooper House</string>
    <string name="product_name">The Albenian Lipstick of Sorts</string>
    <string name="price">Price</string>
</resources>