<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.theelitedevelopers.ecommerce.presentation.home.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.theelitedevelopers.ecommerce.presentation.home.fragments.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.theelitedevelopers.ecommerce.presentation.home.fragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.theelitedevelopers.ecommerce.presentation.home.fragments.ProfileFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_profile" />

</navigation>