<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.home.productDetail.ProductDetailActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/go_back"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/primary_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/background_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_arrow"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <ImageView
            android:id="@+id/mark_as_favorite"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/search"
            app:tint="@color/primary_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/product_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/curved_background"
        android:layout_marginTop="@dimen/_190sdp">

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/add_to_cart"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_to_cart_button"
            android:text="$480.99"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/product_price"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/product_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/product_name"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/nunito_sans"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_16ssp"
            app:drawableStartCompat="@drawable/ic_brand"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/brand"
            android:text="@string/category"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/nunito_sans"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_category"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            app:layout_constraintBottom_toTopOf="@+id/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textAlignment="gravity"
                android:gravity="start"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_14ssp" />

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>