<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".presentation.home.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/menu"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icon_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/open_drawer"
            app:tint="@color/icon_color" />

        <ImageView
            android:id="@+id/shopping_bag"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icon_shopping_bag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/shop" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="Hi, Amanda !"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/menu"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/tag_line"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/secondary_text"
            app:layout_constraintStart_toStartOf="@+id/menu"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tag_line"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:id="@+id/search"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/search"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brands_recycler_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="@+id/menu"
            app:layout_constraintEnd_toEndOf="@+id/shopping_bag"
            app:layout_constraintTop_toBottomOf="@+id/tag_line"
            tools:listitem="@layout/brand_item"
            android:layout_marginTop="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/brands_recycler_view"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/product_item"
            android:layout_marginTop="@dimen/_10sdp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="Try again"
            android:visibility="gone"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>